--- a/website/src/App.css
+++ b/website/src/App.css
@@ -9,10 +9,12 @@
   /*Color mode HSL(hue, saturation, lightness)*/
   --hue: 0;
   --sat: 0%;
-  --title-color: hsl(var(--hue), var(--sat), 20%);
+  
+  /* --title-color: hsl(var(--hue), var(--sat), 20%);
   --title-color-dark: hsl(var(--hue), var(--sat), 0%);
-  --text-color: hsl(var(--hue), var(--sat), 46%);
-  --body-color: hsl(var(--hue), var(--sat), 98%);
+  --text-color: hsl(var(--hue), var(--sat), 46%); */
+  background-color: rgb(0, 0, 33);
+  /* --body-color: hsl(var(--hue), var(--sat), 98%); */
   --container-color: #fff;
 
   /*========== Font and typography ==========*/
