--- a/website/src/components/header/header.css
+++ b/website/src/components/header/header.css
@@ -4,7 +4,10 @@
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    background-color: var(--body-color);
+    background-color: rgb(6, 6, 65);
+    
+    /* background-color: var(--body-color); */
+    /* color: #fff; */
 }
 
 .nav {
@@ -13,11 +16,12 @@
     justify-content: space-between;
     align-items: center;
     column-gap: 1rem;
+    
 }
 
 .nav__logo,
 .nav__toggle {
-    color: var(--title-color);
+    color: #fff;
     font-weight: var(--font-medium);
 }
 
@@ -30,10 +34,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: var(--small-font-size);
+    font-size:15px;
     color: var(--title-color);
     font-weight: var(--font-medium);
     transition: .3s;
+    color: #fff;
 }
 
 .nav__icon,
@@ -45,7 +50,8 @@
 /* Active link */
 .active-link,
 .nav__link:hover {
-    color: var(--title-color-dark);
+    color: #989898;
+    font-size: 15.2px;
 }
 
 /* Change background header */
