--- a/website/src/components/home/home.css
+++ b/website/src/components/home/home.css
@@ -1,12 +1,18 @@
 .home__container{
     row-gap: 7rem;
-    display:flex
+    display:flex;
+    padding-top: 5%;
 }
-.home__content{
+.home__social__left{
+    padding-right: 100px;
+    padding-top: 85px;
+}
+.left__section{
     /* grid-template-columns: 116px repeat(2,1fr); */
     padding-top: 5.5rem;
     column-gap: 2rem;
     align-items: center;
+    
 }
 .home_social{
     display: grid;
@@ -16,15 +22,16 @@
 }
 .home_social_icon{
     font-size: 1.25rem;
-    color: var(--title-color);
+    color: #fff;
 }
 .home_social_icon:hover{
-    color: var(--title-color-dark);
+    color: #989898;
 }
 .home__title{
     font-size: 1.5265rem;
     /* margin-bottom: var(--mb-0-25); */
     font-weight: 500;
+    color: #fff;
 }
 .home__title span {
     color: rgb(170, 107, 228);
@@ -34,6 +41,7 @@
     font-size: 1.5265rem;
     /* padding-left: 5.4rem; */
     font-weight: var(--font-medium);
+    color: #fff;
     /* margin-bottom: var(--mb-1); */
 }
 .home__type{
@@ -43,9 +51,34 @@
     /* padding-bottom: 100%; */
 }
 
-    .home_img {
+    .right__section {
+    
+        
+        padding-left: 20%;      
+        /* box-shadow: inset 0 20px 0 200px rgb(255 255 255 / 10%);
+        
+        animation: profile__animate 8s ease-in-out infinite 1s; */
+      }
+      
+      @keyframes profile__animate {
+        0% {
+          border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+        }
+      
+        50% {
+          border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+        }
+      
+        100% {
+          border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+        }
+      }
+
+
+
+
         /* background: url(../../assets//profile.jpg); */
-        background-repeat: no-repeat;
+        /* background-repeat: no-repeat;
         background-position:right;
         background-size: cover;
         box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%);
@@ -53,7 +86,6 @@
         justify-self: center;
         width: 1500px;
         height: 200px;
-        animation: profile__animate 8s ease-in-out infinite 1s;
+        animation: profile__animate 8s ease-in-out infinite 1s; */
     
-}
 
