--- a/website/src/components/header/header.css
+++ b/website/src/components/header/header.css
@@ -4,10 +4,7 @@
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    background-color: rgb(6, 6, 65);
-    
-    /* background-color: var(--body-color); */
-    /* color: #fff; */
+    background-color: var(--body-color);
 }
 
 .nav {
@@ -16,12 +13,11 @@
     justify-content: space-between;
     align-items: center;
     column-gap: 1rem;
-    
 }
 
 .nav__logo,
 .nav__toggle {
-    color: #fff;
+    color: var(--title-color);
     font-weight: var(--font-medium);
 }
 
@@ -34,11 +30,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size:15px;
+    font-size: var(--small-font-size);
     color: var(--title-color);
     font-weight: var(--font-medium);
     transition: .3s;
-    color: #fff;
 }
 
 .nav__icon,
@@ -50,8 +45,7 @@
 /* Active link */
 .active-link,
 .nav__link:hover {
-    color: #989898;
-    font-size: 15.2px;
+    color: var(--title-color-dark);
 }
 
 /* Change background header */
