--- a/website/src/components/header/header.css
+++ b/website/src/components/header/header.css
@@ -14,7 +14,11 @@
     align-items: center;
     column-gap: 1rem;
 }
-
+.nav__logo{
+    width: 80px;
+    height: 60px;
+    padding-top: 15px;
+}
 .nav__logo,
 .nav__toggle {
     color: var(--title-color);
