--- a/website/src/components/home/home.css
+++ b/website/src/components/home/home.css
@@ -13,64 +13,55 @@
     display: grid;
     grid-template-columns: max-content;
     row-gap: 1rem;
+    padding-bottom: 62px;
   }
   
-  .home__social-icon {
+  .home_social-icon {
     font-size: 1.25rem;
     color: var(--title-color);
   }
   
-  .home__social-icon:hover {
+  .home_social-icon:hover {
     color: var(--title-color-dark);
   }
   
   .home__title {
-    font-size: var(--big-font-size);
+    font-size: 2rem;
     margin-bottom: var(--mb-0-25);
+    margin-bottom: 25px;
   }
-  
-  .home__hand {
-    width: 38px;
-    height: 38px;
-    margin-left: 0.4rem;
-  }
-  
-  .home__subtitle {
-    position: relative;
-    font-size: var(--h3-font-size);
-    padding-left: 5.4rem;
-    font-weight: var(--font-normal);
-    margin-bottom: var(--mb-1);
-  }
-  
-  .home__subtitle::before {
-    content: "";
-    position: absolute;
-    width: 70px;
-    height: 1px;
-    background-color: var(--text-color);
-    left: 0;
-    top: 1rem;
-  }
-  
-  .home__description {
-    max-width: 400px;
-    margin-bottom: var(--mb-3);
-  }
-  
+  span{
+    color: rgb(51,101,171);
+    
+  }  
   .home__img {
-    background: url(../../assets//img1.png);
+    background: url(../../assets//img4.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%);
+    box-shadow: inset 0 0 0 9px rgba(255, 255, 255 / 30%);
+    background-color: rgba(0, 0, 0, 0.5);
     order: 1;
     justify-self: center;
     width: 300px;
     height: 300px;
     animation: profile__animate 8s ease-in-out infinite 1s;
   }
-  
+
+.button{
+  width: 15;
+  height: 15;
+  border-radius: 30px;
+  background-color: black;
+
+}
+
+.button:hover{
+  background-color: #2b2727;
+  font-size: 16px;
+}
+
+
   @keyframes profile__animate {
     0% {
       border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
