Add contact and certificates page components change color add new features.

--- a/website/src/components/certificates/work.css
+++ b/website/src/components/certificates/work.css
@@ -1,7 +1,8 @@
 .work__container {
     gap: 3rem;
-    grid-template-columns: repeat(2, max-content);
+    grid-template-columns: repeat(3, max-content);
     justify-content: center;
+    align-items: center;
   }
   
   .work__filters {
@@ -19,6 +20,7 @@
     font-weight: var(--font-medium);
     border-radius: 0.5rem;
     text-transform: capitalize;
+   
   }
   
   .work__item:hover {
@@ -26,25 +28,30 @@
     color: var(--container-color);
   }
   
-  .work__card {
+  /* .work__card {
     background-color: var(--container-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1.25rem;
     border-radius: 1rem;
-  }
+  } */
   
   .work__img {
-    width: 295px;
-    border-radius: 1rem;
+    width: 130px;
+    /* border-radius: 1rem; */
     margin-bottom: var(--mb-1);
+    border:1.5px solid #000;
+  }
+  .work__img:hover{
+    width: 450px;
+   
   }
   
   .work__title {
-    font-size: var(--normal-font-size);
+    font-size: 12px;
     font-weight: var(--font-medium);
     margin-bottom: var(--mb-0-5);
+    text-align:start;
   }
-  
   .work__button {
     width: max-content;
     color: var(--text-color);
