--- a/website/src/App.css
+++ b/website/src/App.css
@@ -9,9 +9,10 @@
   /*Color mode HSL(hue, saturation, lightness)*/
   --hue: 0;
   --sat: 0%;
-  --title-color: hsl(var(--hue), var(--sat), 20%);
-  --title-color-dark: hsl(var(--hue), var(--sat), 0%);
-  --text-color: hsl(var(--hue), var(--sat), 46%);
+  --title-color: #fff;
+  --title-color-dark: rgb(99,112,132);
+  --subtitle-color:rgb(99,112,132);
+  --text-color: rgb(99,112,132);
   --body-color: hsl(var(--hue), var(--sat), 98%);
   --container-color: #fff;
 
@@ -68,6 +69,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: rgb(15,23,42);
+
 }
 
 html {
@@ -83,7 +86,7 @@ textarea {
 }
 
 body {
-  background-color: var(--body-color);
+  background-color: rgb(15,23,42);
   color: var(--text-color);
 }
 
