--- a/website/src/components/skills/skills.css
+++ b/website/src/components/skills/skills.css
@@ -18,7 +18,7 @@ p{
     text-align: center;
     margin: 5px;
     font-size: 14px;
-    color: black;
+    color: rgb(99,112,132);
 }
 .skill li{
     margin: 10px 2px;
@@ -50,7 +50,7 @@ p{
 
 
 .html{
-    width: 90%;
+    width: 85%;
     animation:html 3s;
 }
 .css{
@@ -89,30 +89,7 @@ p{
     width: 70%;
     animation:react 3s;
 }
-/* .redhat{
-    width: 80%;
-    animation:git 3s;
-} */
-.comm{
-    width: 62%;
-    animation:comm 3s;
-}
-.crv{
-    width: 65%;
-    animation:crv 3s;
-}
-.lds{
-    width: 70%;
-    animation:lds 3s;
-}
-.lgt{
-    width: 80%;
-    animation:lgt 3s;
-}
-.prs{
-    width: 94%;
-    animation:prs 3s;
-}
+
 
 @keyframes html{
     0%{
@@ -188,55 +165,6 @@ p{
     }
     100%{
         width: 70%;
-    }
-}
-/* @keyframes redhat{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width: 69%;
-    }
-}  */
-
-@keyframes comm{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width: 85%;
-    }
-}
-@keyframes crv{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width: 94%;
-    }
-}
-@keyframes lds{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width:80%;
-    }
-}
-@keyframes lgt{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width: 90%;
-    }
-}
-@keyframes prs{
-    0%{
-        width: 0%;
-    }
-    100%{
-        width: 90%;
     }
 }
 
