--- a/website/src/App.css
+++ b/website/src/App.css
@@ -6,20 +6,21 @@
   --header-height: 3rem;
 
   /*========== Colors ==========*/
-  /*Color mode HSL(hue, saturation, lightness)*/
-  --hue: 0;
-  --sat: 0%;
+ 
+
   --title-color: #fff;
   --title-color-dark: rgb(99,112,132);
   --subtitle-color:rgb(99,112,132);
-  --text-color: rgb(99,112,132);
-  --body-color: hsl(var(--hue), var(--sat), 98%);
-  --container-color: #fff;
+  --header-footer-color:rgb(13, 30, 65);
+  --text-color: #fff;
+  --subtitle-text:rgb(99,122,132);
+  --container-color: rgb(99,112,132);
+  --action-button:rgb(81,202,186);
+  
 
   /*========== Font and typography ==========*/
   --body-font: "Poppins", sans-serif;
 
-  /*.5rem = 8px | 1rem = 16px ...*/
   --big-font-size: 3.5rem;
   --h1-font-size: 2.25rem;
   --h2-font-size: 1.5rem;
@@ -35,7 +36,7 @@
   --font-semi-bold: 600;
 
   /*========== Margenes Bottom ==========*/
-  /*.5rem = 8px | 1rem = 16px ...*/
+
   --mb-0-25: 0.25rem;
   --mb-0-5: 0.5rem;
   --mb-0-75: 0.75rem;
@@ -69,7 +70,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: rgb(15,23,42);
+  
 
 }
 
