--- a/website/src/components/footer/footer.css
+++ b/website/src/components/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: var(--container-color);
+    background-color: rgb(4, 17, 42);
     border-top: 1.5px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -32,15 +32,17 @@
     display: flex;
     justify-content: center;
     column-gap: 1.25rem;
+    
 }
 
 .footer__social-link {
-    background-color: var(--title-color);
-    color: var(--container-color);
+    background-color: var(--container-color);
+    /* color: var(--container-color); */
     font-size: 1.25rem;
     padding: 0.4rem;
     border-radius: 0.5rem;
     display: inline-flex;
+    color: var(--action-button);
 }
 
 .footer__social-link:hover {
