--- a/website/src/components/header/header.css
+++ b/website/src/components/header/header.css
@@ -4,13 +4,13 @@
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    background-color: var(--body-color);
+    background-color: var(--header-footer-color);
 }
 
 .nav {
     height: calc(var(--header-height) + 1.5rem);
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     column-gap: 1rem;
 }
@@ -34,7 +34,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: var(--small-font-size);
+    font-size: var(--normal-font-size);
     color: var(--title-color);
     font-weight: var(--font-medium);
     transition: .3s;
@@ -74,7 +74,7 @@
         bottom: -100%;
         left: 0;
         width: 100%;
-        background-color: var(--body-color);
+        background-color: var(--header-footer-color);
         padding: 2rem 1.5rem 4rem;
         box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
         border-radius: 1.5rem 1.5rem 0 0;
