--- a/website/src/components/skills/skills.css
+++ b/website/src/components/skills/skills.css
@@ -10,8 +10,12 @@
     padding: 10px;
     box-shadow: 0 14px 28px rgba(0, 0,0,0.25), 0 10px 10px rgba(0, 0,0,0.22);
 }
-h1{
-    text-align: center;
+
+h3{
+    color:var(--tittle-color);
+}
+h3:hover{
+    color: var(--action-button);
 }
 
 p{
