--- a/website/src/components/header/header.css
+++ b/website/src/components/header/header.css
@@ -61,8 +61,8 @@
 /* For medium devices */
 @media screen and (max-width: 768px) {
     .header {
-        top: initial;
-        bottom: 0;
+        bottom: initial;
+        top: 0;
     }
 
     .nav {
